src/validation/snapshots/rusty__validation__variable__variable_validator_tests__validate_empty_enum_declaration.snap
---
source: src/validation/variable.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected Literal but found )
  ┌─ <internal>:2:25
  │
2 │         TYPE my_enum : (); END_TYPE
  │                         ^ Unexpected token: expected Literal but found )

error[E007]: Unexpected token: expected Literal but found )
  ┌─ <internal>:6:28
  │
6 │                 my_enum : ();
  │                            ^ Unexpected token: expected Literal but found )
